# compass

./: .gitignore  README.md  main.py  pyproject.toml
app/: config.py
app/data/: __init__.py  database.py  entries.py  models.py  summaries.py  users.py
app/llm/: __init__.py  base.py  ollama.py
app/metrics/: __init__.py  base.py  registry.py
app/metrics/implementations/: __init__.py  alone.py  alone_time.py  exercise.py  groceries.py  mood.py  notes.py  scale.py
app/web/: app.py
app/web/static/: script.js  style.css
app/web/templates/: base.html  dashboard.html  index.html  new_user.html  trends.html
data/: entries.py
llm/: ollama.py
metrics/: __init__.py
metrics/implementations/: notes.py
web/static/: style.css
web/templates/: dashboard.html  index.html  new_user.html  settings.html
